<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="403dp"
        android:layout_height="354dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2_conflicted_answers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="393dp"
        android:layout_height="182dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_answer_1"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:text="@string/answers_is_1"
            app:layout_constraintEnd_toStartOf="@+id/button_answer_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_answer_5"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:text="@string/answers_is_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_no_answer"
            android:layout_width="97dp"
            android:layout_height="67dp"
            android:layout_marginTop="16dp"
            android:text="@string/answers_is_no_answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_answer_3"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_answer_2"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:text="@string/answers_is_2"
            app:layout_constraintStart_toEndOf="@+id/button_answer_1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_answer_3"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:text="@string/answers_is_3"
            app:layout_constraintStart_toEndOf="@+id/button_answer_2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_answer_4"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:text="@string/answers_is_4"
            app:layout_constraintStart_toEndOf="@+id/button_answer_3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_ca_current_position_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

    <ProgressBar
        android:id="@+id/progressBar_ra"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>